<resources>
    <string name="app_name">LocalBindingService_IntentService</string>
    <string name="string_startthread">Start Thread</string>
    <string name="string_stopthread">Stop thread</string>
    <string name="string_startservice">Start Service</string>
    <string name="string_stopservice">Stop Service</string>
    <string name="service_demo_tag">ServiceDemo</string>
    <string name="string_bind">Bind Service</string>
    <string name="string_unbind">Unbind Service</string>
    <string name="string_getrandom_number">Get random number</string>

    <string name="message">Press a Button to Demonstrate How IntentService Works</string>
    <string name="IntentServiceButtonLabel">Run IntentService Test (Good Design)</string>
    <string name="stopque">stop Que</string>
    <string name="MainThreadButtonLabel">Run Main Thread Test (Bad Design)</string>
</resources>
